--- a/YoutubeBatchDownloaderWeb/Web.config
+++ b/YoutubeBatchDownloaderWeb/Web.config
@@ -12,8 +12,15 @@
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5"/>
-    <httpRuntime targetFramework="4.5"/>
+    <httpRuntime maxUrlLength="10999" maxQueryStringLength="2097151" targetFramework="4.5"/>
   </system.web>
+  <system.webServer>
+    <security>
+      <requestFiltering>
+        <requestLimits maxUrl="10999" maxQueryString="2097151" />
+      </requestFiltering>
+    </security>
+  </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
