--- a/YoutubeBatchDownloaderService/YoutubeBatchDownloaderService.csproj
+++ b/YoutubeBatchDownloaderService/YoutubeBatchDownloaderService.csproj
@@ -41,7 +41,13 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegexHelper.cs" />
-    <Compile Include="ThunderVBSGenerator.cs" />
+    <Compile Include="ThunderVBS\ThunderVBSTemplate.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ThunderVBSTemplate.tt</DependentUpon>
+    </Compile>
+    <Compile Include="ThunderVBS\ThunderVBSGenerator.cs" />
+    <Compile Include="ThunderVBS\ThunderVBSPartial.cs" />
     <Compile Include="YoutubeHtmlParser\TableParser.cs" />
     <Compile Include="YoutubeHtmlParser\YoutubeHtmlParser.cs" />
   </ItemGroup>
@@ -50,6 +56,15 @@
       <Project>{3e228f82-58db-4e2b-ba6d-a560f9d4e20a}</Project>
       <Name>YoutubeBatchDownloaderModel</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ThunderVBS\ThunderVBSTemplate.tt">
+      <Generator>TextTemplatingFilePreprocessor</Generator>
+      <LastGenOutput>ThunderVBSTemplate.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
