--- a/YoutubeBatchDownloaderTest/YoutubeBatchDownloaderTest.csproj
+++ b/YoutubeBatchDownloaderTest/YoutubeBatchDownloaderTest.csproj
@@ -56,7 +56,8 @@
   </Choose>
   <ItemGroup>
     <Compile Include="HtmlParserTestBase.cs" />
-    <Compile Include="ThunderVBSGeneratorTest.cs" />
+    <Compile Include="ThunderVBS\ThunderVBSPartialTest.cs" />
+    <Compile Include="ThunderVBS\ThunderVBSGeneratorTest.cs" />
     <Compile Include="RegexHelperTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="YoutubeTableHtmlParserTest\TableParserTest.cs" />
