[CastleDI] Batch renamed files.

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\YoutubeBatchDownloader.Web\packages.config" />
   <repository path="..\YoutubeBatchDownloaderService\packages.config" />
   <repository path="..\YoutubeBatchDownloaderTest\packages.config" />
   <repository path="..\YoutubeBatchDownloaderWeb\packages.config" />
