--- a/YoutubeBatchDownloader.Service/YoutubeBatchDownloader.Service.csproj
+++ b/YoutubeBatchDownloader.Service/YoutubeBatchDownloader.Service.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>YoutubeBatchDownloader.Service</RootNamespace>
-    <AssemblyName>YoutubeBatchDownloaderService</AssemblyName>
+    <AssemblyName>YoutubeBatchDownloader.Service</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -53,12 +53,6 @@
     <Compile Include="YoutubeHtmlParser\YoutubeHtmlParser.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\YoutubeBatchDownloader.Model\YoutubeBatchDownloader.Model.csproj">
-      <Project>{3e228f82-58db-4e2b-ba6d-a560f9d4e20a}</Project>
-      <Name>YoutubeBatchDownloaderModel</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
     <None Include="ThunderVBS\ThunderVBSTemplate.tt">
       <Generator>TextTemplatingFilePreprocessor</Generator>
       <LastGenOutput>ThunderVBSTemplate.cs</LastGenOutput>
@@ -66,6 +60,12 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\YoutubeBatchDownloader.Model\YoutubeBatchDownloader.Model.csproj">
+      <Project>{3e228f82-58db-4e2b-ba6d-a560f9d4e20a}</Project>
+      <Name>YoutubeBatchDownloader.Model</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
