--- a/YoutubeBatchDownloader/YoutubeBatchDownloader.csproj
+++ b/YoutubeBatchDownloader/YoutubeBatchDownloader.csproj
@@ -78,13 +78,13 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\YoutubeBatchDownloaderModel\YoutubeBatchDownloaderModel.csproj">
+    <ProjectReference Include="..\YoutubeBatchDownloader.Model\YoutubeBatchDownloader.Model.csproj">
       <Project>{3e228f82-58db-4e2b-ba6d-a560f9d4e20a}</Project>
-      <Name>YoutubeBatchDownloaderModel</Name>
+      <Name>YoutubeBatchDownloader.Model</Name>
     </ProjectReference>
-    <ProjectReference Include="..\YoutubeBatchDownloaderService\YoutubeBatchDownloaderService.csproj">
+    <ProjectReference Include="..\YoutubeBatchDownloader.Service\YoutubeBatchDownloader.Service.csproj">
       <Project>{c95ed308-cbcc-49a1-886b-773ea6273747}</Project>
-      <Name>YoutubeBatchDownloaderService</Name>
+      <Name>YoutubeBatchDownloader.Service</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
