--- a/YoutubeBatchDownloader.Win/YoutubeBatchDownloader.Win.csproj
+++ b/YoutubeBatchDownloader.Win/YoutubeBatchDownloader.Win.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{A7AAE2D4-4287-477E-B31E-F2C4F7248E19}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>YoutubeBatchDownloader</RootNamespace>
-    <AssemblyName>YoutubeBatchDownloader</AssemblyName>
+    <RootNamespace>YoutubeBatchDownloader.Win</RootNamespace>
+    <AssemblyName>YoutubeBatchDownloader.Win</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -60,6 +60,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="YoutubeDownloader.resx">
       <DependentUpon>YoutubeDownloader.cs</DependentUpon>
