[master] 1. Renamed HtmlPaserTestBase.cs to TestBase.cs 2. Set FileReader as non-static.

--- a/YoutubeBatchDownloader.Test/YoutubeBatchDownloader.Test.csproj
+++ b/YoutubeBatchDownloader.Test/YoutubeBatchDownloader.Test.csproj
@@ -62,7 +62,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="HtmlParserTestBase.cs" />
+    <Compile Include="TestBase.cs" />
     <Compile Include="ThunderVBS\ThunderVBSGeneratorTest.cs" />
     <Compile Include="RegexHelperTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
