--- a/YoutubeBatchDownloader.Utility/YoutubeBatchDownloader.Utility.csproj
+++ b/YoutubeBatchDownloader.Utility/YoutubeBatchDownloader.Utility.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C95ED308-CBCC-49A1-886B-773EA6273747}</ProjectGuid>
+    <ProjectGuid>{20C1D0E1-7FF5-42FD-9682-78BAAC157F7C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>YoutubeBatchDownloader.Service</RootNamespace>
-    <AssemblyName>YoutubeBatchDownloader.Service</AssemblyName>
+    <RootNamespace>YoutubeBatchDownloader.Utility</RootNamespace>
+    <AssemblyName>YoutubeBatchDownloader.Utility</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -46,32 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DI\UnityRegister.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RegexHelper.cs" />
-    <Compile Include="ThunderVBS\ThunderVBSTemplate.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>ThunderVBSTemplate.tt</DependentUpon>
-    </Compile>
-    <Compile Include="ThunderVBS\ThunderVBSGenerator.cs" />
-    <Compile Include="ThunderVBS\ThunderVBSPartial.cs" />
-    <Compile Include="YoutubeHtmlParser\TableParser.cs" />
-    <Compile Include="YoutubeHtmlParser\YoutubeHtmlParser.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="ThunderVBS\ThunderVBSTemplate.tt">
-      <Generator>TextTemplatingFilePreprocessor</Generator>
-      <LastGenOutput>ThunderVBSTemplate.cs</LastGenOutput>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\YoutubeBatchDownloader.Model\YoutubeBatchDownloader.Model.csproj">
-      <Project>{3e228f82-58db-4e2b-ba6d-a560f9d4e20a}</Project>
-      <Name>YoutubeBatchDownloader.Model</Name>
-    </ProjectReference>
+    <Compile Include="Utility\FileReader.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
