--- a/YoutubeBatchDownloader.Web/YoutubeBatchDownloader.Web.csproj
+++ b/YoutubeBatchDownloader.Web/YoutubeBatchDownloader.Web.csproj
@@ -199,6 +199,10 @@
       <Project>{c95ed308-cbcc-49a1-886b-773ea6273747}</Project>
       <Name>YoutubeBatchDownloader.Service</Name>
     </ProjectReference>
+    <ProjectReference Include="..\YoutubeBatchDownloader.Utility\YoutubeBatchDownloader.Utility.csproj">
+      <Project>{20c1d0e1-7ff5-42fd-9682-78baac157f7c}</Project>
+      <Name>YoutubeBatchDownloader.Utility</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
