--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\YoutubeBatchDownloader.Model\packages.config" />
+  <repository path="..\YoutubeBatchDownloader.Service\packages.config" />
   <repository path="..\YoutubeBatchDownloader.Test\packages.config" />
+  <repository path="..\YoutubeBatchDownloader.Utility\packages.config" />
   <repository path="..\YoutubeBatchDownloader.Web\packages.config" />
   <repository path="..\YoutubeBatchDownloaderService\packages.config" />
   <repository path="..\YoutubeBatchDownloaderTest\packages.config" />
