[MultiLanguage] Supported simplified Chinese language.

--- a/YoutubeBatchDownloader.Web/Web.config
+++ b/YoutubeBatchDownloader.Web/Web.config
@@ -13,6 +13,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime maxUrlLength="10999" maxQueryStringLength="2097151" targetFramework="4.5" />
+    <globalization enableClientBasedCulture="true" uiCulture="auto" culture="auto" />
   </system.web>
   <system.webServer>
     <security>
