[master] Use independent Utility project.

--- a/YoutubeBatchDownloader.Test/YoutubeBatchDownloader.Test.csproj
+++ b/YoutubeBatchDownloader.Test/YoutubeBatchDownloader.Test.csproj
@@ -74,6 +74,10 @@
     <Compile Include="YoutubeTableHtmlParserTest\YoutubeHtmlParserTest.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Utility\Utility.csproj">
+      <Project>{2b445d6f-9169-4f78-b5f6-b5f57f1de0fc}</Project>
+      <Name>Utility</Name>
+    </ProjectReference>
     <ProjectReference Include="..\YoutubeBatchDownloader.Model\YoutubeBatchDownloader.Model.csproj">
       <Project>{3e228f82-58db-4e2b-ba6d-a560f9d4e20a}</Project>
       <Name>YoutubeBatchDownloader.Model</Name>
@@ -81,10 +85,6 @@
     <ProjectReference Include="..\YoutubeBatchDownloader.Service\YoutubeBatchDownloader.Service.csproj">
       <Project>{c95ed308-cbcc-49a1-886b-773ea6273747}</Project>
       <Name>YoutubeBatchDownloader.Service</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\YoutubeBatchDownloader.Utility\YoutubeBatchDownloader.Utility.csproj">
-      <Project>{20c1d0e1-7ff5-42fd-9682-78baac157f7c}</Project>
-      <Name>YoutubeBatchDownloader.Utility</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
