[StartIndex] Added StartPosition to set the start file name.

--- a/YoutubeBatchDownloader.Test/YoutubeBatchDownloader.Test.csproj
+++ b/YoutubeBatchDownloader.Test/YoutubeBatchDownloader.Test.csproj
@@ -91,6 +91,9 @@
     <Content Include="Utility\FileReaderTest.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="YoutubeTableHtmlParserTest\GenerateThunderVbsTestStartPosition2.vbs">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="YoutubeTableHtmlParserTest\GenerateThunderVbsTest.vbs">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
