--- a/YoutubeBatchDownloader.Model/YoutubeBatchDownloader.Model.csproj
+++ b/YoutubeBatchDownloader.Model/YoutubeBatchDownloader.Model.csproj
@@ -46,11 +46,13 @@
     <Compile Include="Sequence\TitleFirstSequence.cs" />
     <Compile Include="Sequence\VideoFirstSequence.cs" />
     <Compile Include="Video.cs" />
+    <Compile Include="View\HomeView.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
     <None Include="Settings.StyleCop" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\StyleCop.MSBuild.4.7.49.0\build\StyleCop.MSBuild.Targets" Condition="Exists('..\packages\StyleCop.MSBuild.4.7.49.0\build\StyleCop.MSBuild.Targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
