[GenerateDownloadUrlList] Added VBS as a case.

--- a/YoutubeBatchDownloader.Model/YoutubeBatchDownloader.Model.csproj
+++ b/YoutubeBatchDownloader.Model/YoutubeBatchDownloader.Model.csproj
@@ -45,7 +45,9 @@
     <Compile Include="Sequence\ISequence.cs" />
     <Compile Include="Sequence\TitleFirstSequence.cs" />
     <Compile Include="Sequence\VideoFirstSequence.cs" />
-    <Compile Include="Video.cs" />
+    <Compile Include="Video\VideoCommonDownloadTool.cs" />
+    <Compile Include="Video\VideoVBS.cs" />
+    <Compile Include="Video\Video.cs" />
     <Compile Include="View\HomeView.cs" />
   </ItemGroup>
   <ItemGroup>
