[GenerateDownloadUrlList] Implemented and wrote unit tests.

--- a/YoutubeBatchDownloader.Model/YoutubeBatchDownloader.Model.csproj
+++ b/YoutubeBatchDownloader.Model/YoutubeBatchDownloader.Model.csproj
@@ -45,7 +45,7 @@
     <Compile Include="Sequence\ISequence.cs" />
     <Compile Include="Sequence\TitleFirstSequence.cs" />
     <Compile Include="Sequence\VideoFirstSequence.cs" />
-    <Compile Include="Video\VideoCommonDownloadTool.cs" />
+    <Compile Include="Video\VideoStandard.cs" />
     <Compile Include="Video\VideoVBS.cs" />
     <Compile Include="Video\Video.cs" />
     <Compile Include="View\HomeView.cs" />
