--- a/YoutubeBatchDownloader.Service/YoutubeBatchDownloader.Service.csproj
+++ b/YoutubeBatchDownloader.Service/YoutubeBatchDownloader.Service.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegexHelper.cs" />
+    <Compile Include="StandardTxt\StandardTxtGenerator.cs" />
     <Compile Include="ThunderVBS\ThunderVBSTemplate.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -58,6 +59,7 @@
     <Compile Include="ThunderVBS\ThunderVBSGenerator.cs" />
     <Compile Include="ThunderVBS\ThunderVBSPartial.cs" />
     <Compile Include="TablePaser\TableParser.cs" />
+    <Compile Include="YoutubeHtmlParser\YoutubeHtmlParserStandard.cs" />
     <Compile Include="YoutubeHtmlParser\YoutubeHtmlParserVBS.cs" />
     <Compile Include="YoutubeHtmlParser\YoutubeHtmlParser.cs" />
   </ItemGroup>
@@ -78,6 +80,7 @@
       <Name>YoutubeBatchDownloader.Model</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\StyleCop.MSBuild.4.7.49.0\build\StyleCop.MSBuild.Targets" Condition="Exists('..\packages\StyleCop.MSBuild.4.7.49.0\build\StyleCop.MSBuild.Targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
