--- a/YoutubeBatchDownloader.Test/YoutubeBatchDownloader.Test.csproj
+++ b/YoutubeBatchDownloader.Test/YoutubeBatchDownloader.Test.csproj
@@ -65,12 +65,13 @@
   </Choose>
   <ItemGroup>
     <Compile Include="TestBase.cs" />
-    <Compile Include="ThunderVBS\ThunderVBSGeneratorTest.cs" />
+    <Compile Include="Generator\ThunderVBSGeneratorTest.cs" />
     <Compile Include="RegexHelperTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ThunderVBS\ThunderVBSPartialTest.cs" />
+    <Compile Include="Generator\ThunderVBSPartialTest.cs" />
     <Compile Include="Utility\FileReaderTest.cs" />
     <Compile Include="TableParser\TableParserTest.cs" />
+    <Compile Include="YoutubeTableHtmlParser\YoutubeHtmlParserStandardTest.cs" />
     <Compile Include="YoutubeTableHtmlParser\YoutubeHtmlParserVBSTest.cs" />
     <Compile Include="YoutubeTableHtmlParser\YoutubeHtmlParserTest.cs" />
   </ItemGroup>
@@ -90,6 +91,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Utility\FileReaderTest.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="YoutubeTableHtmlParser\GenerateStandard.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="YoutubeTableHtmlParser\GenerateThunderVbsTestStartPosition2.vbs">
