--- a/YoutubeBatchDownloader.Service/YoutubeBatchDownloader.Service.csproj
+++ b/YoutubeBatchDownloader.Service/YoutubeBatchDownloader.Service.csproj
@@ -59,6 +59,7 @@
     <Compile Include="ThunderVBS\ThunderVBSGenerator.cs" />
     <Compile Include="ThunderVBS\ThunderVBSPartial.cs" />
     <Compile Include="TablePaser\TableParser.cs" />
+    <Compile Include="YoutubeHtmlParser\IYoutubeHtmlParser.cs" />
     <Compile Include="YoutubeHtmlParser\YoutubeHtmlParserStandard.cs" />
     <Compile Include="YoutubeHtmlParser\YoutubeHtmlParserVBS.cs" />
     <Compile Include="YoutubeHtmlParser\YoutubeHtmlParser.cs" />
