[StrongConfig] Added StrongConfig to the project.

--- a/Utility/Utility.csproj
+++ b/Utility/Utility.csproj
@@ -54,6 +54,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Config\StrongConfigFacade.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>StrongConfigFacade.tt</DependentUpon>
+    </Compile>
     <Compile Include="DI\UnityRegister.cs" />
     <Compile Include="File\FileReader.cs" />
     <Compile Include="File\ResourceSerialiser.cs" />
@@ -61,6 +66,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Config\StrongConfigFacade.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>StrongConfigFacade.cs</LastGenOutput>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
