[RemoveGeneric] Removed unnecessary "generics".

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\Utility\packages.config" />
   <repository path="..\YoutubeBatchDownloader.Model\packages.config" />
   <repository path="..\YoutubeBatchDownloader.Service\packages.config" />
   <repository path="..\YoutubeBatchDownloader.Test\packages.config" />
