--- a/YoutubeBatchDownloader.Service/packages.config
+++ b/YoutubeBatchDownloader.Service/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AngleSharp" version="0.9.3" targetFramework="net45" />
+  <package id="Antlr3.StringTemplate" version="3.4.1.9005" targetFramework="net45" />
   <package id="CsQuery" version="1.3.4" targetFramework="net45" />
   <package id="StyleCop.MSBuild" version="4.7.49.0" targetFramework="net45" developmentDependency="true" />
 </packages>
